# rubash

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: bash-implementation-inventory.md  bash-source-map.md  bash-upstream-tests.md  source-layout.md
memory/: bashrs-progress.md
scripts/: run-bash-upstream-tests.sh
src/: lib.rs  main.rs
src/builtins/: alias.rs  bind.rs  caller.rs  cd.rs  colon.rs  command.rs  complete.rs  declare.rs  declare_tests.rs  disown.rs  echo.rs  enable.rs  eval.rs  exec.rs  exit.rs  fc.rs  fg_bg.rs  hash.rs  help.rs  history.rs  jobs.rs  kill.rs  let.rs  logout.rs  mod.rs  printf.rs  printf_tests.rs  pushd.rs  pwd.rs  set.rs  setattr.rs  setattr_tests.rs  shift.rs  shopt.rs  source.rs  suspend.rs  test.rs  test_tests.rs  times.rs  trap.rs  (+5 more)
src/executor/: alias_arithmetic_for.rs  alias_case.rs  alias_loop_match.rs  alias_loops.rs  alias_reparse.rs  alias_select.rs  alias_set_builtins.rs  arithmetic.rs  arithmetic_aliases.rs  array_assignment_exec.rs  arrays.rs  assignment_dispatch.rs  assignment_expansion.rs  assignment_helpers.rs  ast_exec.rs  builtin_direct.rs  builtin_direct_command.rs  builtin_direct_late.rs  builtin_names.rs  builtin_redirects.rs  command.rs  command_dispatch.rs  command_dispatch_late.rs  command_dispatch_primary.rs  (+87 more)
tests/: cli_example_tests.rs  cli_script_tests.rs  cli_tests.rs  executor_tests.rs  lexer_comment_tests.rs  lexer_operator_tests.rs  lexer_quote_tests.rs  lexer_tests.rs  parameter_transform_tests.rs  parser_coproc_tests.rs  parser_redirection_tests.rs  parser_tests.rs  run_all_tests.sh  test_arrays.sh  test_basics.sh  test_control_flow.sh  test_functions.sh  test_io.sh  test_variables.sh
(+208 files in other folders)
