# Rust-Shell - A Rust implementation of GNU Bash
# Copyright 2024-2026 Rust-Shell Contributors
# License: GPL-3.0-or-later

[package]
name = "rubash"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
authors = ["unixwin team <arookieofc@gmail.com>"]
description = "A Rust implementation of the GNU Bash shell"
readme = "README.md"
homepage = "https://github.com/unixwin/rubash"
repository = "https://github.com/unixwin/rubash"
license = "GPL-3.0-or-later"
keywords = ["shell", "bash", "cli", "posix"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/**",
    "Cargo.toml.orig",
    "memory/**",
    "target/**",
    "third_party/bash/**",
    "!third_party/bash/tests/*.right",
]

[dependencies]
regex = "1"
ctrlc = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
